@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-25T02:19:18Z",
+  "timestamp" : "2022-06-25T08:26:57Z",
   "count_outdated" : 204,
   "uniques_outdated" : 94,
-  "count" : 228,
-  "uniques" : 109,
+  "count" : 229,
+  "uniques" : 110,
   "clones" : [
     {
       "timestamp": "2022-06-11T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-06-24T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
